--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,32 @@
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
+  padding-top: 0;
   text-align: center;
+}
+
+.header {
+  margin: 1rem;
+}
+
+.header h1 {
+  font-size: 2rem;
+  font-weight: 900;
+  padding: 1.4rem;
+}
+
+nav {
+  margin-top: 0.5rem;
+}
+
+.topic-link {
+  text-decoration: none;
+  padding: 0.5rem;
+  text-transform: uppercase;
+}
+
+.topic-link:visited {
+  color: inherit;
 }
 
 .article {
@@ -45,4 +70,21 @@ span {
   width: 100%;
   max-width: 500px;
   margin: 1rem 0;
+}
+
+/* article by id styling */
+
+.article-by-id {
+  border: 3px solid rgb(89, 88, 88);
+  margin: 2rem;
+  line-height: 1.7;
+}
+
+.article-by-id h3 {
+  font-size: 1.7rem;
+  padding: 2rem;
+}
+
+.article-body {
+  margin: 2rem;
 }
