--- a/src/App.css
+++ b/src/App.css
@@ -92,6 +92,11 @@ span {
 .votes {
   width: 20%;
   margin: 1rem auto;
-  font-size: 1.5rem;
+}
+
+.votes button {
+  font-size: 1rem;
   font-weight: 700;
+  padding: 0.3rem;
+  margin: 0.5rem;
 }
